plugins {
	id 'java'
}

repositories {
	// mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = '1.12.23'

dependencies {
	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.12'
	testImplementation 'net.jqwik:jqwik:1.7.4'
	testImplementation 'org.mockito:mockito-core:4.11.0'
	testImplementation 'org.assertj:assertj-core:3.24.2'
	testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.9.3'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.9.3'
	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name:'jshell', version: runeLiteVersion
}

group = 'com.osrs.accessdenied'
version = '1.0-SNAPSHOT'

tasks.register('runTestClient', JavaExec) {
    group = 'application'
    description = 'Runs the AccessDeniedPluginTest main class'
    dependsOn testClasses
    classpath = sourceSets.test.runtimeClasspath
    main = 'com.osrs.accessdenied.AccessDeniedPluginTest'
    args = ['--developer-mode']
    jvmArgs = [
            '-ea',
            '-Drunelite.pluginhub.skip=true'
    ]
}


tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

test {
	useJUnitPlatform()
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.testRuntimeClasspath
	manifest {
		attributes('Main-Class': 'com.osrs.accessdenied.AccessDeniedPluginTest', 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from sourceSets.test.output
	from {
		configurations.testRuntimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}
